--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-08-26 (v3.8.28)
+        <ul>
+          <li>新增车站：<var>白马北</var>、<var>达州</var>、<var>洞井</var>、<var>峨边南</var>、<var>关林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龙口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江东</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵东</var>、<var>邵阳</var>、<var>田心东</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾东</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 935 个，机器数量达 2836 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-07-31 (v3.8.27)
         <ul>
           <li>新增车站：<var>保定</var>、<var>北滘西</var>、<var>红果</var>、<var>江北机场</var>、<var>顺德北</var>、<var>武隆</var>、<var>扬州东</var>、<var>银花</var>、<var>岳阳</var>、<var>张槎</var>。</li>
