--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-08-26 (v3.8.28)
+        <ul>
+          <li>新駅：<var>白馬北</var>、<var>達州</var>、<var>洞井</var>、<var>峨边南</var>、<var>関林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龍口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江東</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵東</var>、<var>邵阳</var>、<var>田心東</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾東</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
+          <li>記録した駅組 31 個、駅 935 個、機器 2836 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-07-31 (v3.8.27)
         <ul>
           <li>新駅：<var>保定</var>、<var>北滘西</var>、<var>紅果</var>、<var>江北機場</var>（重慶江北国際空港）、<var>顺徳北</var>、<var>武隆</var>、<var>扬州東</var>、<var>銀花</var>、<var>岳陽</var>、<var>張槎</var>。</li>
@@ -430,7 +437,7 @@
       </li>
       <li class="list-group-item">
         2022-08-31(v3.5.1)
-        <ul> 
+        <ul>
           <li>日付表示は更新。</li>
         <li>
           新しい駅：<var>板塘</var>、<var>谷山</var>、<var>観沙嶺</var>、<var>懐柔北</var>、<var>荆門</var>、<var>深圳</var>、<var>先鋒</var>、<var>昭通</var>。<var>仲愷</var>
