--- a/qsl.html
+++ b/qsl.html
@@ -66,14 +66,14 @@
         <li>卡片局：BY 卡片局一年仅分发一次卡片，通过卡片局交换卡片可能需要数年的时间。敬请理解。</li>
         <li>E-mail: bi1mhk*outlook.com （请将 * 替换为 @）</li>
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：每周更新数次。暂无自定义卡面。（仅当服务可用时，下同）</li>
-        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：至少每周更新。有自定义卡面。</li>
+        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：大致每周更新。有自定义卡面。</li>
         <li><a href="http://clublog.org">clublog.org</a>：网络访问较为困难，尽力每月更新。支持 OQRS，但不建议使用。</li>
       </ul>
     </p>
     <p class="text-muted" lang="en">
       The following is the QSL card style in use. Exchanges of QSL card (either paper, E-mail or eQSL) are welcomed, in any mode including FT8 or through FM repeaters.
       <ul class="text-muted">
-        <li>Paper cards via direct: Post mails and parcels are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> addressed below. Once received I will reply within 1~2 months. No cash, stamp or IRC required. I'm happy collecting stamps and postmarks, and incoming mails will be carefully scaned and stored.</li>
+        <li>Paper cards via direct: Post mails and parcels are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> addressed below. Once received I will reply within 1~2 months. No cash, stamp or IRC required. I'm happy collecting stamps and postmarks, and incoming mails will be carefully scanned and stored.</li>
         <li>Via bureau: The BY bureau only distributes cards once a year, so exchanging cards via BURO may take several years. Better e-mail me first if you would like to exchange.</li>
         <li>E-mail: bi1mhk*outlook.com (Replace * with @)</li>
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services online, same below)</li>
@@ -82,9 +82,9 @@
       </ul>
     </p>
     <p class="text-muted" lang="ja">
-      以下は使っているQSLカードのスタイルです。電子カードや紙カード・記念カードの交換を歓迎します！
+      以下は使っているQSLカードのスタイルです。電子カードや紙カード・記念カードの交換を歓迎します！デジタルモード・FMリピーターでも構いません！
       <ul class="text-muted">
-        <li><ruby>直接郵送<rt>Direct</rt></ruby>：郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。宛先は下にご参照ください。現金・切手・<ruby>国際返信切手券<rt>International Reply Coupon</rt></ruby>など必要ありません。消印などを収集しているので、珍しい消印を歓迎します。受け取った郵便物や切手は丁寧にスキャンされ、保存されます。</li>
+        <li><ruby>直接郵送<rt>Direct</rt></ruby>：郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。宛先は下にご参照ください。返信は状況に応じて 1~2ヶ月後になります。現金・切手・<ruby>国際返信切手券<rt>International Reply Coupon</rt></ruby>など必要ありません。消印などを収集しているので、珍しい消印を歓迎します。受け取った郵便物や切手は丁寧にスキャンされ、保存されます。</li>
         <li>ビューロー：BY ビューローは年一回しか出荷しておらず、ビューローでカード交換には数年掛かる可能性があります。ご理解ありがとうございます。</li>
         <li>E-mail: bi1mhk*outlook.com (* を @ へ)</li>
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
@@ -98,7 +98,7 @@
     <section class="my-3">
       <h2 class="py-2">
         邮政地址
-        <small class="text-muted" lang="en">Post address</small>
+        <small class="text-muted" lang="en">Postal address</small>
       </h2>
       <address>
         北京市 昌平区 沙河高教园 南三街9号 北京航空航天大学沙河校区<br />
@@ -107,12 +107,12 @@
       </address>
       <br />
       <address lang="en">
-        BUAA Amaetur Radio Association<br />
+        BUAA Amateur Radio Association<br />
         Beihang University Shahe Campus, Shahe University Park<br />
         Changping District, Beijing 102206<br />
-        China
+        P. R. CHINA
       </address>
-      <div class="alert alert-info" lang="en">If possible, printing Chinese address above and appending English word "China" to it will improve mail process efficiency and lead to less mistakes.</div>
+      <div class="alert alert-info" lang="en">If possible, printing Chinese address above and appending country name "China" in English to it will improve mail process efficiency and lead to less mistakes.</div>
       <div class="alert alert-info" lang="ja">宛先は漢字で書けば郵便の処理効率が向上します。</div>
     </section>
 
@@ -178,18 +178,22 @@
       </h2>
       <p lang="zh-Hans">
         设备：国赫 PMR-171，短波 14.9W / UV 段最大 25W 工作。
-        天线：U2V2 八木天线，车载天线（UV）；品川天线（HF）以及其他临时架设的天线。
-        时常进行客席发射操作，包括协谷、FlexRadio 等各类设备、天线。
+        宝锋 UV-5R，UV 段最大 5W 工作。
       </p>
       <p class="text-muted" lang="en">
-        RIG: Guohe PMR-171, licensed to transmit less than 14.9W (on HF) and 25W (on U/V).
+        RIG: Guohe PMR-171, licensed to transmit less than 14.9W (HF) and 25W (U/V). Baofeng UV-5R, 5W over U/V.
+      </p>
+      <p lang="zh-Hans">
+        天线：U2V2 八木天线，车载天线（UV）；品川天线（HF）以及其他临时架设的天线。
+      </p>
+      <p class="text-muted" lang="en">
         ANT: U2V2 Yagi, vehicle-mounted GP (UV), GAWANT (HF) and other portable antennas.
       </p>
       <p lang="zh-Hans">
         时常进行客席发射操作，借用包括协谷、FlexRadio 等各类设备、天线。
       </p>
       <p class="text-muted" lang="en">
-        Often operated as guest, using Xiegu, FlexRadio and many other RIGs or ANTs owned by friends.
+        Often operating as guest, using Xiegu, FlexRadio and many other RIGs or ANTs owned by friends.
       </p>
     </section>
     <section class="my-3">
