--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-09-27 (v3.8.29)
+        <ul>
+          <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在本年10月集中处理。</li>
+          <li>新增车站：<var>丹阳北</var>、<var>怀来</var>、<var>黄龙九寨</var>、<var>黄胜关</var>、<var>阆中</var>、<var>南充</var>、<var>南充北</var>、<var>蓬安</var>、<var>松潘</var>、<var>杨林</var>、<var>漳州</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 946 个，机器数量达 2876 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-08-26 (v3.8.28)
         <ul>
           <li>新增车站：<var>白马北</var>、<var>达州</var>、<var>洞井</var>、<var>峨边南</var>、<var>关林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龙口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江东</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵东</var>、<var>邵阳</var>、<var>田心东</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾东</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
