--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-09-27 (v3.8.29)
+        <ul>
+          <li>学業上の理由で、当サイトの更新が遅くなる可能性があります。適時に更新できなかったデータは、本年10月に集中処理されます。</li>
+          <li>新駅：<var>丹阳北</var>、<var>怀来</var>、<var>黄龙九寨</var>、<var>黄胜关</var>、<var>阆中</var>、<var>南充</var>、<var>南充北</var>、<var>蓬安</var>、<var>松潘</var>、<var>杨林</var>、<var>漳州</var>。</li>
+          <li>記録した駅組 31 個、駅 946 個、機器 2876 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-08-26 (v3.8.28)
         <ul>
           <li>新駅：<var>白馬北</var>、<var>達州</var>、<var>洞井</var>、<var>峨边南</var>、<var>関林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龍口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江東</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵東</var>、<var>邵阳</var>、<var>田心東</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾東</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
