--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 8 月 26 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 9 月 27 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -85,7 +85,7 @@
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
       <tr><td>5</td><td>北京南</td><td>51</td><td>61</td></tr>
-      <tr><td>6</td><td>北京西</td><td>42</td><td>55</td></tr>
+      <tr><td>6</td><td>北京西</td><td>42</td><td>56</td></tr>
       <tr><td>7</td><td>盐城</td><td>38</td><td>50</td></tr>
       <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>9</td><td>兰州</td><td>32</td><td>46</td></tr>
@@ -134,10 +134,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-08-26 (v3.8.28)
+        2024-09-27 (v3.8.29)
         <ul>
-          <li>新增车站：<var>白马北</var>、<var>达州</var>、<var>洞井</var>、<var>峨边南</var>、<var>关林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龙口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江东</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵东</var>、<var>邵阳</var>、<var>田心东</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾东</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 935 个，机器数量达 2836 台。</li>
+          <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在本年10月集中处理。</li>
+          <li>新增车站：<var>丹阳北</var>、<var>怀来</var>、<var>黄龙九寨</var>、<var>黄胜关</var>、<var>阆中</var>、<var>南充</var>、<var>南充北</var>、<var>蓬安</var>、<var>松潘</var>、<var>杨林</var>、<var>漳州</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 946 个，机器数量达 2876 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
