--- a/qsl.html
+++ b/qsl.html
@@ -113,7 +113,7 @@
         P. R. CHINA
       </address>
       <div class="alert alert-info" lang="en">If possible, printing Chinese address above and appending country name "China" in English to it will improve mail process efficiency and lead to less mistakes.</div>
-      <div class="alert alert-info" lang="ja">宛先は漢字で書けば郵便の処理効率が向上します。</div>
+      <div class="alert alert-info" lang="ja">宛先は漢字で書けば郵便の処理効率が向上します。詳細は日本郵便の<a href="https://www.post.japanpost.jp/cgi-kokusai/country.php?cid=41">国際郵便条件表</a>にご参考ください。</div>
     </section>
 
     <section class="my-3">
