--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-11-04 (v3.8.30)
+        <ul>
+          <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在年底集中处理。</li>
+          <li>新增车站：<var>德昌西</var>、<var>汾河</var>、<var>贾鲁河</var>、<var>隆化</var>、<var>泸县</var>、<var>泸州</var>、<var>马鞍</var>、<var>孟庄</var>、<var>米易东</var>、<var>南曹</var>、<var>犍为</var>、<var>滕州</var>、<var>盐边</var> 、<var>仪陇</var>、<var>亦庄</var>、<var>营山</var>、<var>长宁</var>、<var>正定</var>、<var>资阳北</var>、<var>资阳西</var>、<var>紫阳</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 967 个，机器数量达 2964 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-09-27 (v3.8.29)
         <ul>
           <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在本年10月集中处理。</li>
