--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-11-04 (v3.8.30)
+        <ul>
+          <li>学業上の理由で、当サイトの更新が遅くなる可能性があります。適時に更新できなかったデータは、年末に集中処理されます。</li>
+          <li>新駅：<var>德昌西</var>、<var>汾河</var>、<var>贾鲁河</var>、<var>隆化</var>、<var>泸县</var>、<var>泸州</var>、<var>马鞍</var>、<var>孟庄</var>、<var>米易东</var>、<var>南曹</var>、<var>犍为</var>、<var>滕州</var>、<var>盐边</var> 、<var>仪陇</var>、<var>亦庄</var>、<var>营山</var>、<var>长宁</var>、<var>正定</var>、<var>资阳北</var>、<var>资阳西</var>、<var>紫阳</var>。</li>
+          <li>記録した駅組 31 個、駅 967 個、機器 2964 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-09-27 (v3.8.29)
         <ul>
           <li>学業上の理由で、当サイトの更新が遅くなる可能性があります。適時に更新できなかったデータは、本年10月に集中処理されます。</li>
