--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 9 月 27 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 11 月 4 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -85,11 +85,11 @@
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
       <tr><td>5</td><td>北京南</td><td>51</td><td>61</td></tr>
-      <tr><td>6</td><td>北京西</td><td>42</td><td>56</td></tr>
-      <tr><td>7</td><td>盐城</td><td>38</td><td>50</td></tr>
-      <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>9</td><td>兰州</td><td>32</td><td>46</td></tr>
-      <tr><td>10</td><td>徐州东</td><td>32</td><td>41</td></tr>
+      <tr><td>6</td><td>北京西</td><td>46</td><td>60</td></tr>
+      <tr><td>7</td><td>广州东</td><td>39</td><td>43</td></tr>
+      <tr><td>8</td><td>盐城</td><td>38</td><td>50</td></tr>
+      <tr><td>9</td><td>杭州东</td><td>36</td><td>42</td></tr>
+      <tr><td>10</td><td>兰州</td><td>32</td><td>46</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -134,11 +134,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-09-27 (v3.8.29)
+        2024-11-04 (v3.8.30)
         <ul>
-          <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在本年10月集中处理。</li>
-          <li>新增车站：<var>丹阳北</var>、<var>怀来</var>、<var>黄龙九寨</var>、<var>黄胜关</var>、<var>阆中</var>、<var>南充</var>、<var>南充北</var>、<var>蓬安</var>、<var>松潘</var>、<var>杨林</var>、<var>漳州</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 946 个，机器数量达 2876 台。</li>
+          <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在年底集中处理。</li>
+          <li>新增车站：<var>德昌西</var>、<var>汾河</var>、<var>贾鲁河</var>、<var>隆化</var>、<var>泸县</var>、<var>泸州</var>、<var>马鞍</var>、<var>孟庄</var>、<var>米易东</var>、<var>南曹</var>、<var>犍为</var>、<var>滕州</var>、<var>盐边</var> 、<var>仪陇</var>、<var>亦庄</var>、<var>营山</var>、<var>长宁</var>、<var>正定</var>、<var>资阳北</var>、<var>资阳西</var>、<var>紫阳</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 967 个，机器数量达 2964 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
