--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,10 +61,17 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-11-30 (v3.8.31)
+        <ul>
+          <li>新駅：<var>大邑</var>、<var>海口東</var>、<var>泸州東</var>、<var>南部</var>、<var>南溪</var>、<var>蓬安西</var>、<var>屏山</var>、<var>商城</var>、<var>無錫東</var>、<var>武胜</var>、<var>宣威</var>、<var>宜宾</var>、<var>湛江西</var>。</li>
+          <li>記録した駅組 31 個、駅 980 個、機器 2994 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-11-04 (v3.8.30)
         <ul>
           <li>学業上の理由で、当サイトの更新が遅くなる可能性があります。適時に更新できなかったデータは、年末に集中処理されます。</li>
-          <li>新駅：<var>德昌西</var>、<var>汾河</var>、<var>贾鲁河</var>、<var>隆化</var>、<var>泸县</var>、<var>泸州</var>、<var>马鞍</var>、<var>孟庄</var>、<var>米易东</var>、<var>南曹</var>、<var>犍为</var>、<var>滕州</var>、<var>盐边</var> 、<var>仪陇</var>、<var>亦庄</var>、<var>营山</var>、<var>长宁</var>、<var>正定</var>、<var>资阳北</var>、<var>资阳西</var>、<var>紫阳</var>。</li>
+          <li>新駅：<var>德昌西</var>、<var>汾河</var>、<var>贾鲁河</var>、<var>隆化</var>、<var>泸県</var>、<var>泸州</var>、<var>马鞍</var>、<var>孟庄</var>、<var>米易東</var>、<var>南曹</var>、<var>犍为</var>、<var>滕州</var>、<var>盐辺</var> 、<var>儀陇</var>、<var>亦庄</var>、<var>营山</var>、<var>長寧</var>、<var>正定</var>、<var>资阳北</var>、<var>资阳西</var>、<var>紫阳</var>。</li>
           <li>記録した駅組 31 個、駅 967 個、機器 2964 個。</li>
         </ul>
       </li>
@@ -79,7 +86,7 @@
       <li class="list-group-item">
         2024-08-26 (v3.8.28)
         <ul>
-          <li>新駅：<var>白馬北</var>、<var>達州</var>、<var>洞井</var>、<var>峨边南</var>、<var>関林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龍口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江東</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵東</var>、<var>邵阳</var>、<var>田心東</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾東</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
+          <li>新駅：<var>白馬北</var>、<var>達州</var>、<var>洞井</var>、<var>峨辺南</var>、<var>関林</var>、<var>吉安西</var>、<var>六盘水</var>、<var>龍口市</var>、<var>娄底南</var>、<var>南溪北</var>、<var>内江東</var>、<var>平遥古城</var>、<var>普者黑</var>、<var>邵東</var>、<var>邵阳</var>、<var>田心東</var>、<var>湘府路</var>、<var>湘潭北</var>、<var>宣汉</var>、<var>宜宾東</var>、<var>于都</var>、<var>株洲西</var>、<var>自贡</var>。</li>
           <li>記録した駅組 31 個、駅 935 個、機器 2836 個。</li>
         </ul>
       </li>
@@ -283,7 +290,7 @@
         <ul>
           <li>「券紙統計」を導入。自動的に生成されたので、ご参考まで。</li>
           <li>券紙、タグ、状態変化などに関する一部の表記を調整。</li>
-          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>開平南</var>、<var>楽平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>陽平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
+          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>開平南</var>、<var>楽平市</var>、<var>墨江</var>、<var>寧洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>陽平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
           <li>記録した駅組 30 個、駅 740 個、機器 2111 個。</li>
         </ul>
       </li>
@@ -356,7 +363,7 @@
         2023-03-18 (v3.7.7)
         <ul>
           <li>拼音排列方を変更。</li>
-          <li>新しい駅：<var>包頭東</var>、<var>滁州北</var>、<var>集宁南</var>、<var>全椒</var>、<var>通州西</var>、<var>烏蘭察布</var>。</li>
+          <li>新しい駅：<var>包頭東</var>、<var>滁州北</var>、<var>集寧南</var>、<var>全椒</var>、<var>通州西</var>、<var>烏蘭察布</var>。</li>
           <li>消した駅：<var>包頭</var>。</li>
           <li>記録した駅組 29 個、駅 679 個、機器 1886 個。</li>
         </ul>
@@ -464,7 +471,7 @@
         2022-08-16(v3.5.0)
         <ul>
           <li>ジェネレータ：製造会社選択を調整。</li>
-          <li>新しい駅：<var>溧水</var>、<var>宁郷</var>、<var>宜賓西</var>。</li>
+          <li>新しい駅：<var>溧水</var>、<var>寧郷</var>、<var>宜賓西</var>。</li>
           <li>ファイル版本番号は <code>2022e</code> にする。</li>
         </ul>
       </li>
@@ -478,7 +485,7 @@
         2022-07-03(v3.4.3)
         <ul>
         <li>
-          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮陽東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>雲陽</var>、<var>鄭州航空港</var>。
+          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>寧陵県</var>、<var>濮陽東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>雲陽</var>、<var>鄭州航空港</var>。
         </li>
           <li>一部駅の情報を調整。</li>
           <li>一部データの失効原因を明らかにした。</li>
