--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-11-30 (v3.8.31)
+        <ul>
+          <li>新增车站：<var>大邑</var>、<var>海口东</var>、<var>泸州东</var>、<var>南部</var>、<var>南溪</var>、<var>蓬安西</var>、<var>屏山</var>、<var>商城</var>、<var>无锡东</var>、<var>武胜</var>、<var>宣威</var>、<var>宜宾</var>、<var>湛江西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 980 个，机器数量达 2994 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-11-04 (v3.8.30)
         <ul>
           <li>因学业原因，本站更新可能变慢。未能及时更新的数据将在年底集中处理。</li>
