--- a/qsl.html
+++ b/qsl.html
@@ -68,6 +68,7 @@
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：每周更新数次。暂无自定义卡面。（仅当服务可用时，下同）</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：大致每周更新。有自定义卡面。</li>
         <li><a href="http://clublog.org">clublog.org</a>：网络访问较为困难，尽力每月更新。支持 OQRS，但不建议使用。</li>
+        <li>其他平台 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (汉语), <a href="http://dcl.darc.de/">DARC DCL</a> (德语), <a href="https://qso.su/">qso.su</a> (俄语), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (纸质卡，西班牙语), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): 随机更新，按需更新。</li>
       </ul>
     </p>
     <p class="text-muted" lang="en">
@@ -76,9 +77,10 @@
         <li>Paper cards via direct: Post mails and parcels are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> addressed below. Once received I will reply within 1~2 months. No cash, stamp or IRC required. I'm happy collecting stamps and postmarks, and incoming mails will be carefully scanned and stored.</li>
         <li>Via bureau: The BY bureau only distributes cards once a year, so exchanging cards via BURO may take several years. Better e-mail me first if you would like to exchange.</li>
         <li>E-mail: bi1mhk*outlook.com (Replace * with @)</li>
-        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services online, same below)</li>
+        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services are online and when I have Internet access, same below)</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>: Upload once a week or more. Custom style available.</li>
         <li><a href="http://clublog.org">clublog.org</a>: Try to upload at least once a month, because of network reasons. OQRS supported but not recommended.</li>
+        <li>Others (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (Chinese), <a href="http://dcl.darc.de/">DARC DCL</a> (Germen), <a href="https://qso.su/">qso.su</a> (Russian), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (Paper QSLs, Español), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): Update randomly, or on demand.</li>
       </ul>
     </p>
     <p class="text-muted" lang="ja">
@@ -87,9 +89,10 @@
         <li><ruby>直接郵送<rt>Direct</rt></ruby>：郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。宛先は下にご参照ください。返信は状況に応じて 1~2ヶ月後になります。現金・切手・<ruby>国際返信切手券<rt>International Reply Coupon</rt></ruby>など必要ありません。消印などを収集しているので、珍しい消印を歓迎します。受け取った郵便物や切手は丁寧にスキャンされ、保存されます。</li>
         <li>ビューロー：BY ビューローは年一回しか出荷しておらず、ビューローでカード交換には数年掛かる可能性があります。ご理解ありがとうございます。</li>
         <li>E-mail: bi1mhk*outlook.com (* を @ へ)</li>
-        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
-        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：週に一回更新します。カスタムカードスタイルはあります。</li>
+        <li>LoTW、<a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>、<a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
+        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>、<a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：週に一回更新します。カスタムカードスタイルはあります。</li>
         <li><a href="http://clublog.org">clublog.org</a>：ネットワークの原因で、毎月更新できるように努めています。OQRSはサポートされていますが、推奨されていません。</li>
+        <li>その他 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (中国語)、<a href="http://dcl.darc.de/">DARC DCL</a> (ドイツ語)、<a href="https://qso.su/">qso.su</a> (ロシア語)、<a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (紙QSL・スペイン語)、<a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): ランダム。必要に応じて更新。</li>
       </ul>
     </p>
 
