--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-12-31 (v3.8.32) 元旦快乐！
+        <ul>
+          <li>新增车站：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
+          <li>里程碑：覆盖售取票机器数量超过 3000 台！</li>
+          <li>车站组总数达 31 个，车站总数达 988 个，机器数量达 3018 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-11-30 (v3.8.31)
         <ul>
           <li>新增车站：<var>大邑</var>、<var>海口东</var>、<var>泸州东</var>、<var>南部</var>、<var>南溪</var>、<var>蓬安西</var>、<var>屏山</var>、<var>商城</var>、<var>无锡东</var>、<var>武胜</var>、<var>宣威</var>、<var>宜宾</var>、<var>湛江西</var>。</li>
