--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-12-31 (v3.8.32) 新年あけましておめでとう！
+        <ul>
+          <li>新駅：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
+          <li>マイルストーン：収録した機器数は 3000 に超えました！</li>
+          <li>記録した駅組 31 個、駅 988 個、機器 3018 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-11-30 (v3.8.31)
         <ul>
           <li>新駅：<var>大邑</var>、<var>海口東</var>、<var>泸州東</var>、<var>南部</var>、<var>南溪</var>、<var>蓬安西</var>、<var>屏山</var>、<var>商城</var>、<var>無錫東</var>、<var>武胜</var>、<var>宣威</var>、<var>宜宾</var>、<var>湛江西</var>。</li>
