--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,7 +85,7 @@
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
       <tr><td>5</td><td>北京南</td><td>51</td><td>61</td></tr>
-      <tr><td>6</td><td>北京西</td><td>46</td><td>60</td></tr>
+      <tr><td>6</td><td>北京西</td><td>48</td><td>62</td></tr>
       <tr><td>7</td><td>广州东</td><td>39</td><td>43</td></tr>
       <tr><td>8</td><td>盐城</td><td>38</td><td>51</td></tr>
       <tr><td>9</td><td>杭州东</td><td>36</td><td>42</td></tr>
@@ -134,10 +134,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-11-30 (v3.8.31)
+        2024-12-31 (v3.8.32) 元旦快乐！
         <ul>
-          <li>新增车站：<var>大邑</var>、<var>海口东</var>、<var>泸州东</var>、<var>南部</var>、<var>南溪</var>、<var>蓬安西</var>、<var>屏山</var>、<var>商城</var>、<var>无锡东</var>、<var>武胜</var>、<var>宣威</var>、<var>宜宾</var>、<var>湛江西</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 980 个，机器数量达 2994 台。</li>
+          <li>新增车站：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
+          <li>里程碑：覆盖售取票机器数量超过 3000 台！</li>
+          <li>车站组总数达 31 个，车站总数达 988 个，机器数量达 3018 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
