--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2025-01-31 (v3.9.0) 春节快乐！
+        <ul>
+          <li>更改文件名版本号为<code>2025a</code>。</li>
+          <li>新增车站：<var>巴中</var>、<var>巴中东</var>、<var>高兴</var>、<var>杭州西</var>、<var>平昌</var>、<var>肃宁</var>、<var>岳池</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 995 个，机器数量达 3041 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-12-31 (v3.8.32) 元旦快乐！
         <ul>
           <li>新增车站：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
