--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 
 <head>
-  <title>運転マスデータ ｜ 変更履歴</title>
+  <title>運転ビッグデータ ｜ 変更履歴</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keyword" content="运转大数据, 運転マスデータ, Yùnzhuǎn Dà-shùjù, Big Data for Train Travel in China" />
+  <meta name="keyword" content="运转大数据, 運転ビッグデータ, 運転マスデータ, Yùnzhuǎn Dà-shùjù, Big Data for Train Travel in China" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <style>
@@ -17,7 +17,7 @@
   <a id="top"></a>
   <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./tktmach_latest.html">運転マスデータ</a>
+      <a class="navbar-brand" href="./tktmach_latest.html">運転ビッグデータ</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTog" aria-controls="navbarTog" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +39,7 @@
   </nav>
   <div class="container">
     <h1>
-      運転マスデータ
+      運転ビッグデータ
       <small class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</small>
     </h1>
     <p>
@@ -61,9 +61,17 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2025-01-31 (v3.9.0) 旧暦正月おめでとう！
+        <ul>
+          <li>ファイル版本番号は <code>2025a</code> にする。</li>
+          <li>新駅：<var>巴中</var>、<var>巴中東</var>、<var>高興</var>、<var>杭州西</var>、<var>平昌</var>、<var>肃寧</var>、<var>岳池</var>。</li>
+          <li>記録した駅組 31 個、駅 995 個、機器 3041 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-12-31 (v3.8.32) 新年あけましておめでとう！
         <ul>
-          <li>新駅：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
+          <li>新駅：<var>苍溪</var>、<var>朝天</var>、<var>広安</var>、<var>広安南</var>、<var>冕寧</var>、<var>寧强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
           <li>マイルストーン：収録した機器数は 3000 に超えました！</li>
           <li>記録した駅組 31 個、駅 988 個、機器 3018 個。</li>
         </ul>
