--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 11 月 30 日版本</a></p>
+    <p><a href="./tktMach2025a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2025 年 1 月 31 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -80,12 +80,12 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>71</td><td>97</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>71</td><td>98</td></tr>
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
-      <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
-      <tr><td>5</td><td>北京南</td><td>51</td><td>61</td></tr>
-      <tr><td>6</td><td>北京西</td><td>48</td><td>62</td></tr>
+      <tr><td>4</td><td>北京南</td><td>55</td><td>66</td></tr>
+      <tr><td>5</td><td>郑州</td><td>51</td><td>73</td></tr>
+      <tr><td>6</td><td>北京西</td><td>49</td><td>64</td></tr>
       <tr><td>7</td><td>广州东</td><td>39</td><td>43</td></tr>
       <tr><td>8</td><td>盐城</td><td>38</td><td>51</td></tr>
       <tr><td>9</td><td>杭州东</td><td>36</td><td>42</td></tr>
@@ -134,11 +134,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-12-31 (v3.8.32) 元旦快乐！
+        2025-01-31 (v3.9.0) 春节快乐！
         <ul>
-          <li>新增车站：<var>苍溪</var>、<var>朝天</var>、<var>广安</var>、<var>广安南</var>、<var>冕宁</var>、<var>宁强南</var>、<var>西昌</var>、<var>喜德西</var>。</li>
-          <li>里程碑：覆盖售取票机器数量超过 3000 台！</li>
-          <li>车站组总数达 31 个，车站总数达 988 个，机器数量达 3018 台。</li>
+          <li>更改文件名版本号为<code>2025a</code>。</li>
+          <li>新增车站：<var>巴中</var>、<var>巴中东</var>、<var>高兴</var>、<var>杭州西</var>、<var>平昌</var>、<var>肃宁</var>、<var>岳池</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 995 个，机器数量达 3041 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
