--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2025a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2025 年 1 月 31 日版本</a></p>
+    <p><a href="./tktMach2025a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2025 年 3 月 6 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -134,19 +134,18 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2025-03-06 (v3.9.1)
+        <ul>
+          <li>新增车站：<var>白银市</var>、<var>楚雄</var>、<var>通道</var>、<var>浠水南</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 999 个，机器数量达 3051 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2025-01-31 (v3.9.0) 春节快乐！
         <ul>
           <li>更改文件名版本号为<code>2025a</code>。</li>
           <li>新增车站：<var>巴中</var>、<var>巴中东</var>、<var>高兴</var>、<var>杭州西</var>、<var>平昌</var>、<var>肃宁</var>、<var>岳池</var>。</li>
           <li>车站组总数达 31 个，车站总数达 995 个，机器数量达 3041 台。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        …… 2023-06-25 (v3.8.0)
-        <ul>
-          <li>注意：v3.8.0-beta.3 版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
-          <li>新增车站：<var>临潼</var>、<var>牟平</var>、<var>平泉北</var>、<var>兴隆县西</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 709 个，机器数量达 2037 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
