--- a/qsl.html
+++ b/qsl.html
@@ -184,13 +184,27 @@
         宝锋 UV-5R，UV 段最大 5W 工作。
       </p>
       <p class="text-muted" lang="en">
-        RIG: Guohe PMR-171, licensed to transmit less than 14.9W (HF) and 25W (U/V). Baofeng UV-5R, 5W over U/V.
+        RIG: GuoheTec PMR-171, licensed to transmit less than 14.9W (HF) and 25W (U/V). Baofeng UV-5R, 5W over U/V.
       </p>
       <p lang="zh-Hans">
-        天线：U2V2 八木天线，车载天线（UV）；品川天线（HF）以及其他临时架设的天线。
+        天线：
+        <ul>
+          <li>U2V2 八木天线；</li>
+          <li>车载棒状天线（UV）;</li>
+          <li>国赫 GH-V5 正V天线（7-430 MHz）；</li>
+          <li><a href="https://www.windcamp-gear.com/productinfo/372468.html">Windcamp 吉普赛 5-50 MHz 卷绕式水平偶极天线</a>;</li>
+          <li>品川天线（7-28 MHz）以及其他临时架设的天线。</li>
+        </ul>
       </p>
       <p class="text-muted" lang="en">
-        ANT: U2V2 Yagi, vehicle-mounted GP (UV), GAWANT (HF) and other portable antennas.
+        ANT:
+        <ul class="text-muted">
+          <li>U2V2 Yagi,</li>
+          <li>vehicle-mounted GP (UV),</li>
+          <li>GuoheTec GH-V5 Vee antenna (7-430 MHz),</li>
+          <li><a href="https://www.windcamp-gear.com/productinfo/372468.html">Windcamp Gipsy 5-50 MHz Coil Dipole antenna</a>,</li>
+          <li>GAWANT (7-28 MHz) and other portable antennas.</li>
+        </ul>
       </p>
       <p lang="zh-Hans">
         时常进行客席发射操作，借用包括协谷、FlexRadio 等各类设备、天线。
