--- a/qsl.html
+++ b/qsl.html
@@ -68,7 +68,7 @@
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：每周更新数次。暂无自定义卡面。（仅当服务可用时，下同）</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：大致每周更新。有自定义卡面。</li>
         <li><a href="http://clublog.org">clublog.org</a>：网络访问较为困难，尽力每月更新。支持 OQRS，但不建议使用。</li>
-        <li>其他平台 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (汉语), <a href="http://dcl.darc.de/">DARC DCL</a> (德语), <a href="https://qso.su/">qso.su</a> (俄语), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (纸质卡，西班牙语), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): 随机更新，按需更新。</li>
+        <li>其他平台 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (汉语), <a href="http://dcl.darc.de/">DARC DCL</a> (德语), <a href="https://qso.su/">qso.su</a> (俄语), <a href="https://logradio.ru/">logradio.ru</a> (俄语), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (纸质卡，西班牙语), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): 随机更新，按需更新。</li>
       </ul>
     </p>
     <p class="text-muted" lang="en">
@@ -80,7 +80,7 @@
         <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services are online and when I have Internet access, same below)</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>: Upload once a week or more. Custom style available.</li>
         <li><a href="http://clublog.org">clublog.org</a>: Try to upload at least once a month, because of network reasons. OQRS supported but not recommended.</li>
-        <li>Others (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (Chinese), <a href="http://dcl.darc.de/">DARC DCL</a> (Germen), <a href="https://qso.su/">qso.su</a> (Russian), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (Paper QSLs, Español), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): Update randomly, or on demand.</li>
+        <li>Others (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (Chinese), <a href="http://dcl.darc.de/">DARC DCL</a> (Germen), <a href="https://qso.su/">qso.su</a> (Russian), <a href="https://logradio.ru/">logradio.ru</a> (Russian), <a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (Paper QSLs, Español), <a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): Update randomly, or on demand.</li>
       </ul>
     </p>
     <p class="text-muted" lang="ja">
@@ -92,7 +92,7 @@
         <li>LoTW、<a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>、<a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
         <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>、<a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：週に一回更新します。カスタムカードスタイルはあります。</li>
         <li><a href="http://clublog.org">clublog.org</a>：ネットワークの原因で、毎月更新できるように努めています。OQRSはサポートされていますが、推奨されていません。</li>
-        <li>その他 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (中国語)、<a href="http://dcl.darc.de/">DARC DCL</a> (ドイツ語)、<a href="https://qso.su/">qso.su</a> (ロシア語)、<a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (紙QSL・スペイン語)、<a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): ランダム。必要に応じて更新。</li>
+        <li>その他 (<a href="https://hamcq.cn/BI1MHK">hamcq.cn</a> (中国語)、<a href="http://dcl.darc.de/">DARC DCL</a> (ドイツ語)、<a href="https://qso.su/">qso.su</a> (ロシア語)、<a href="https://logradio.ru/">logradio.ru</a> (ロシア語)、<a href="https://www.eurobureauqsl.org/">EuroBureauQSL / EURAO / FEDI-EA</a> (紙QSL・スペイン語)、<a href="https://www.hamqth.com/BI1MHK">hamqth.com</a>): ランダム。必要に応じて更新。</li>
       </ul>
     </p>
 
@@ -180,18 +180,18 @@
         <small class="text-muted" lang="en">RIG &amp; ANT</small>
       </h2>
       <p lang="zh-Hans">
-        设备：国赫 PMR-171，短波 14.9W / UV 段最大 25W 工作。
+        设备：<a href="https://www.guohedz.com/PMR-171?_l=zh_CN">国赫 PMR-171</a>，短波 14.9W / UV 段最大 25W 工作。
         宝锋 UV-5R，UV 段最大 5W 工作。
       </p>
       <p class="text-muted" lang="en">
-        RIG: GuoheTec PMR-171, licensed to transmit less than 14.9W (HF) and 25W (U/V). Baofeng UV-5R, 5W over U/V.
+        RIG: <a href="https://www.guohedz.com/PMR-171">GuoheTec PMR-171</a>, licensed to transmit less than 14.9W (HF) and 25W (U/V). Baofeng UV-5R, 5W over U/V.
       </p>
       <p lang="zh-Hans">
         天线：
         <ul>
-          <li>U2V2 八木天线；</li>
+          <li>U2V2 八木天线，由多位热心友台制作的不同版本；</li>
           <li>车载棒状天线（UV）;</li>
-          <li>国赫 GH-V5 正V天线（7-430 MHz）；</li>
+          <li>国赫 GH-V5 拉杆正V天线（7-430 MHz）；</li>
           <li><a href="https://www.windcamp-gear.com/productinfo/372468.html">Windcamp 吉普赛 5-50 MHz 卷绕式水平偶极天线</a>;</li>
           <li>品川天线（7-28 MHz）以及其他临时架设的天线。</li>
         </ul>
@@ -199,9 +199,9 @@
       <p class="text-muted" lang="en">
         ANT:
         <ul class="text-muted">
-          <li>U2V2 Yagi,</li>
+          <li>U2V2 Yagis, made by several warm-hearted HAMs,</li>
           <li>vehicle-mounted GP (UV),</li>
-          <li>GuoheTec GH-V5 Vee antenna (7-430 MHz),</li>
+          <li><a href="https://www.guohedz.com/PMR-171-Backpack">GuoheTec GH-V5 Whip Vee antenna (7-430 MHz)</a> (for your info; not so accurate),</li>
           <li><a href="https://www.windcamp-gear.com/productinfo/372468.html">Windcamp Gipsy 5-50 MHz Coil Dipole antenna</a>,</li>
           <li>GAWANT (7-28 MHz) and other portable antennas.</li>
         </ul>
