--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2025-05-06 (v3.9.2)
+        <ul>
+          <li>新增车站：<var>巴中西</var>、<var>合川</var>、<var>邛崃</var>、<var>土溪</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 1003 个，机器数量达 3063 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2025-03-06 (v3.9.1)
         <ul>
           <li>新增车站：<var>白银市</var>、<var>楚雄</var>、<var>通道</var>、<var>浠水南</var>。</li>
