--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2025-05-06 (v3.9.2)
+        <ul>
+          <li>新駅：<var>巴中西</var>、<var>合川</var>、<var>邛崃</var>、<var>土溪</var>。</li>
+          <li>記録した駅組 31 個、駅 1003 個、機器 3063 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2025-03-06 (v3.9.1)
         <ul>
           <li>新駅：<var>白銀市</var>、<var>楚雄</var>、<var>通道</var>、<var>浠水南</var>。</li>
