Fix icons; update qsl.html

--- a/qsl.html
+++ b/qsl.html
@@ -56,7 +56,7 @@
     </p>
 
     <p lang="zh-Hans">可以使用汉语（普通话或福州话）、英语和日语交流。<span lang="zh-Hant">如您使用繁體字，請勿用自動翻譯程式書寫，以免影響閲讀。</span></p>
-    <p class="text-muted" lang="en">Speaking Chinese (Mandarin or Foochowese), English or Japanese. You may write in any of the three languages. Please, do not use a translator if you are speaking them. (If you do need one, please have your text in original language attached.)</p>
+    <p class="text-muted" lang="en">Speaking Chinese (Mandarin or Foochowese), English or Japanese. You may write in any of the three languages. Please, do not use a translator if you are speaking them. Machine translators do work 98% right, but 2% ultimately wrong breaking THE WHOLE TEXT. (If you do need one, please have your text in original language attached.)</p>
     <p class="text-muted" lang="ja">中国語・英語と日本語を使えます。日本語のメールは歓迎！仮名より漢字を推奨ですけど…</p>
 
     <p lang="zh-Hans">
