--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
           </h3>
 
           <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
-            When not declared explicitly, all documents below are licensed under CC BY-NC 4.0
-            <a href="https://creativecommons.org/licenses/by-nc/4.0">
-              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc_icon.svg" />
-              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
-              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
-            </a>
+            When not declared explicitly, all documents below are licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>
+            <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">
           </p>
           <p lang="zh">
             <a href="./rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a>
